// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accepts any valid \`div\` attributes 1`] = `
<div
  aria-hidden="false"
  class="solid-colorful"
  id="my-id"
>
  <div
    class="solid-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Color"
      aria-valuetext="Saturation 0%, Brightness 0%"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__saturation-pointer"
        style="top: 100%; left: 0%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(0, 0, 0);"
        />
      </div>
    </div>
  </div>
  <div
    class="solid-colorful__hue solid-colorful__last-control"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders \`HexColorInput\` component properly 1`] = `
<input
  class="custom-input"
  placeholder="AABBCC"
  spellcheck="false"
/>
`;

exports[`Renders proper alpha color picker markup 1`] = `
<div
  class="solid-colorful"
>
  <div
    class="solid-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Color"
      aria-valuetext="Saturation 100%, Brightness 100%"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__saturation-pointer"
        style="top: 0%; left: 100%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
  <div
    class="solid-colorful__hue"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
  <div
    class="solid-colorful__alpha solid-colorful__last-control"
  >
    <div
      class="solid-colorful__alpha-gradient"
    />
    <div
      aria-label="Alpha"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      aria-valuetext="50%"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__alpha-pointer"
        style="top: 50%; left: 50%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgba(255, 0, 0, 0.5);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders proper color picker markup 1`] = `
<div
  class="solid-colorful"
>
  <div
    class="solid-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Color"
      aria-valuetext="Saturation 100%, Brightness 100%"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__saturation-pointer"
        style="top: 0%; left: 100%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
  <div
    class="solid-colorful__hue solid-colorful__last-control"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Works with no props 1`] = `
<div
  class="solid-colorful"
>
  <div
    class="solid-colorful__saturation"
    style="background-color: rgb(255, 0, 0);"
  >
    <div
      aria-label="Color"
      aria-valuetext="Saturation 0%, Brightness 0%"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__saturation-pointer"
        style="top: 100%; left: 0%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(0, 0, 0);"
        />
      </div>
    </div>
  </div>
  <div
    class="solid-colorful__hue solid-colorful__last-control"
  >
    <div
      aria-label="Hue"
      aria-valuemax="360"
      aria-valuemin="0"
      aria-valuenow="0"
      class="solid-colorful__interactive"
      role="slider"
      tabindex="0"
    >
      <div
        class="solid-colorful__pointer solid-colorful__hue-pointer"
        style="top: 50%; left: 0%;"
      >
        <div
          class="solid-colorful__pointer-fill"
          style="background-color: rgb(255, 0, 0);"
        />
      </div>
    </div>
  </div>
</div>
`;
